<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_add_route"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_add_route" />

    <item
        android:id="@+id/navigation_franchise"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_franchise" />

    <item
        android:id="@+id/navigation_vehicle_out"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_vehicle_out" />

    <item
        android:id="@+id/navigation_vehicle_in"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_vehicle_in" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_reports" />

</menu>
